<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DILO</string>
    <string name="title_activity_new_card">New card</string>
    <string name="action_settings">Settings</string>
    <string name="new_card_title">New card</string>
    <string name="edit_card_title">Edit card</string>
    <string name="placeholder_label">Name (label)</string>
    <string name="label_category">Is category?</string>
    <string name="label_image">image</string>
    <string name="color_label">Card color</string>
    <string name="action_accept">Accept</string>
    <string name="change_color">Choose color</string>
    <string name="title_activity_show_cards">View cards</string>
    <string name="action_cancel">CANCEL</string>
    <string name="label_disabled">Disabled</string>
    <string name="config_launcher">Settings</string>
    <string name="prefShowAddCardSummary">Show in each category a button-card that lets you add new cards</string>
    <string name="prefShowAddCard">Create new cards</string>
    <string name="prefTempTextCardSummary">Show a button-card to add a temporal text-based card</string>
    <string name="prefTempTextCard">Temp text cards</string>

    <string name="prefAllowCameraSummary">Allow using the device\'s cameras to take pictures for card creation</string>
    <string name="prefTempAllowCamera">Allow camera</string>
    <string name="prefTextCardSummary">Allow creating text based cards</string>
    <string name="prefTextCard">Text based cards</string>
    <string name="prefDisplayModeText">Basic text mode</string>
    <string name="prefDisplayModeCards">Cards mode</string>
    <string name="prefCategory_displayMode">Display mode</string>
    <string name="prefCategory_cards">Features</string>
    <string name="prefCategory_actions">Card creation</string>
    <string name="prefDisplayModeSummary">Here you can choose the display mode of the selected cards. Each of them is focused on a different communication skill level</string>
    <string name="prefDisplayModeBasic">Basic mode</string>
    <string name="prefDisableCard">Disable cards</string>
    <string name="prefDisableCardSummary">Show an option to be able to enable/disable cards</string>
    <string name="title_activity_show_text">Show text</string>
    <string name="tts_failed">Ouch! TextToSpeech failed</string>
    <string name="prefCloseDoubleTap">Second tap close</string>
    <string name="prefCloseDoubleTapSummary">Close the results view at second screen tap</string>
    <string name="prefDisplayModeTextAdv">Text mode</string>

    <string name="permissionsRationale">The app needs permissions to access external storage. Please check your app settings</string>
    <string name="unableResolveImageRequest">Gallery request: unable to resolve</string>
    <string name="unableResolveCameraRequest">Camera request: unable to resolve</string>
    <string name="input_delete">Delete</string>
    <string name="prefEditCard">Edit cards</string>
    <string name="prefEditCardSummary">Enable editing cards from their context menu</string>
</resources>
