<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@id/new_card_activity"
    tools:context="com.jjoseba.pecsmobile.activity.NewCardActivity"
    android:baselineAligned="false"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_bar">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_card_title"
            android:id="@+id/cancelButton"
            android:drawableLeft="@drawable/ic_action_back"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:paddingRight="20dp"
            android:textSize="30sp"
            android:visibility="visible"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:elegantTextHeight="false"
            android:paddingLeft="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:drawableLeft="@drawable/ic_action_done"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:textSize="30sp"
            android:visibility="visible"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="30dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="30sp"
                android:background="@drawable/card">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="15sp"
                    android:background="@color/default_card"
                    android:id="@+id/card_frame">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView2"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_action_new_picture"
                        android:background="@color/gray"
                        android:scaleType="center" />

                    <com.jjoseba.pecsmobile.ui.SquareImageView
                        android:id="@+id/card_image"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY">
                    </com.jjoseba.pecsmobile.ui.SquareImageView>
                </FrameLayout>
            </FrameLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_title"
                android:layout_gravity="center_horizontal"
                android:hint="@string/placeholder_label"
                android:textSize="34sp"
                android:layout_marginBottom="5dp"
                android:paddingTop="10dp"
                android:inputType="text"
                android:imeOptions="actionDone"/>

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_category"
                android:id="@+id/sw_category"
                android:textSize="28sp"
                android:hint="@string/placeholder_label"
                android:textStyle="normal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_label"
                    android:id="@+id/textView"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|left" />

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/red"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/colorBucket">

                </FrameLayout>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/pickColorButton"
                    android:src="@drawable/ic_action_edit"
                    android:scaleType="fitCenter" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_card"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/pickerContainer">

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/saturationbar"
                android:layout_width="fill_parent"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_margin="8dip"/>

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/valuebar"
                android:layout_width="fill_parent"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_margin="8dip"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/select_color_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_color"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="28sp"
                    android:visibility="visible"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        </FrameLayout>

</LinearLayout>
